test/custom/elaboration/bad/typeclass_method_and_variable.mle
let h : int = let ['a] w : 'a -> int = ['a] fun (x : 'a) -> 0 in 0
class K 'a { x : 'a -> 'a }
